--- a/index.html
+++ b/index.html
@@ -6,6 +6,60 @@
     <title>Landing Page</title>
   </head>
   <body>
+    <div class="header">
+      <div class="right">Header Logo</div>
+      <div class="left">
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
+      </div>
+    </div>
 
+    <div class="title">
+      <div class="hero">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main file. It's a smaller font and is lower contrast.</p>
+        <button class="sign-up">Sign Up</button>
+      </div>
+      <img>
+    </div>
+
+    <div class="information">
+      <h2>Some Random Information</h2>
+      <div class="cards">
+        <img>
+        <p>This is some subtext under an illustration or image</p>
+
+        <img>
+        <p>This is some subtext under an illustration or image</p>
+
+        <img>
+        <p>This is some subtext under an illustration or image</p>
+
+        <img>
+        <p>This is some subtext under an illustration or image</p>
+      </div>
+    </div>
+
+    <div class="quote">
+      <div class="text">Cakes are healthy too, you just eat a small slice.</div>
+      <div class="author">-Mary Berry</div>
+    </div>
+
+    <div class="call-to-action">
+      <div>
+        <div class="text">
+          <h3>Call to action! It's time!</h3>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="sign-up">Sign up</button>
+      </div>
+    </div>
+
+    <div class="footer">
+      <p>Copyright © xavpav9 Unix Epoch</p>
+    </div>
   </body>
 </html>
