Add style for header, Give credit for images
README.md contains credit for the images.

--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
   <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="header">
-      <div class="right">Header Logo</div>
-      <div class="left">
-        <ul>
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
+    <div class="hero">
+      <div class="header">
+        <img class="logo" src="./images/logo.jpg" alt="logo">
+        <ul class="links">
+          <li><a rel="noopener noreferrer" target="_blank" href="https://www.bbcgoodfood.com/recipes/easy-vanilla-cake">Vanilla Cake</a></li>
+          <li><a rel="noopener noreferrer" target="_blank" href="https://www.bbcgoodfood.com/recipes/ultimate-chocolate-cake">Chocolate Cake</a></li>
+          <li><a rel="noopener noreferrer" target="_blank" href="https://www.bbcgoodfood.com/recipes/peanut-butter-cake">Peanut Butter Cake</a></li>
         </ul>
       </div>
-    </div>
 
-    <div class="title">
-      <div class="hero">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main file. It's a smaller font and is lower contrast.</p>
-        <button class="sign-up">Sign Up</button>
+      <div class="title">
+        <div>
+          <h1>Cakes are awesome!</h1>
+          <p>This website explores different cake recipes and in the process, finding out the best cakes.</p>
+          <button class="sign-up">Sign Up</button>
+        </div>
+        <img class="hero-image" src="./images/hero-image.jpg" alt="cake">
       </div>
-      <img>
     </div>
 
     <div class="information">
