Add images and style to information section
As well as add credit for the images to README.md.

--- a/index.html
+++ b/index.html
@@ -28,19 +28,24 @@
     </div>
 
     <div class="information">
-      <h2>Some Random Information</h2>
+      <h2>Ingredients</h2>
       <div class="cards">
-        <img>
-        <p>This is some subtext under an illustration or image</p>
-
-        <img>
-        <p>This is some subtext under an illustration or image</p>
-
-        <img>
-        <p>This is some subtext under an illustration or image</p>
-
-        <img>
-        <p>This is some subtext under an illustration or image</p>
+        <div>
+          <img src="./images/flour.jpg" alt="flour">
+          <p>Flour - provides structures and texture.</p>
+        </div>
+        <div>
+          <img src="./images/sugar.jpg" alt="sugar">
+          <p>Sugar - adds to the structure, texture and flavour.</p>
+        </div>
+        <div>
+          <img src="./images/eggs.jpg" alt="eggs">
+          <p>Eggs - contributes to structure, aeration and colour.</p>
+        </div>
+        <div>
+          <img src="./images/butter.jpg" alt="butter">
+          <p>Butter - creates a better tenderness, texture and flavour. </p>
+        </div>
       </div>
     </div>
 
