Add style to quote section

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
     </div>
 
     <div class="quote">
-      <div class="text">Cakes are healthy too, you just eat a small slice.</div>
-      <div class="author">-Mary Berry</div>
+      <div class="quote-container">
+        <div class="text">Cakes are healthy too, you just eat a small slice.</div>
+        <div class="author">-Mary Berry</div>
+      </div>
     </div>
 
     <div class="call-to-action">
