--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="quote">
       <div class="quote-container">
         <div class="text">Cakes are healthy too, you just eat a small slice.</div>
-        <div class="author">-Mary Berry</div>
+        <div class="author">- Mary Berry</div>
       </div>
     </div>
 
@@ -60,7 +60,7 @@
       <div>
         <div class="text">
           <h3>Call to action! It's time!</h3>
-          <p>Sign up for our product by clicking that button right over there!</p>
+          <p>Sign up for our recipes by clicking that button right over there!</p>
         </div>
         <button class="sign-up">Sign up</button>
       </div>
