Add style to footer, add cakery logo text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <div class="hero">
       <div class="header">
-        <img class="logo" src="./images/logo.jpg" alt="logo">
+        <div class="logo-container">
+          <img class="logo" src="./images/logo.jpg" alt="logo">
+          <p>Cakery</p>
+        </div>
         <ul class="links">
           <li><a rel="noopener noreferrer" target="_blank" href="https://www.bbcgoodfood.com/recipes/easy-vanilla-cake">Vanilla Cake</a></li>
           <li><a rel="noopener noreferrer" target="_blank" href="https://www.bbcgoodfood.com/recipes/ultimate-chocolate-cake">Chocolate Cake</a></li>
